# rspyai

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  lint.yml  publish.yml  run-tests.yml
python/rspyai/: __init__.py  logging.py  rspyai.pyi  settings.py  tui.py
python/rspyai/models/: function_summary.py
python/rspyai/widgets/: function_details.py  function_summary.py  function_tree.py
src/: debug.rs  function.rs  lib.rs  sample.rs  scanner.rs
tests/: test_settings.py
