[package]
name = "rspyai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rspyai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
quote = "1.0.37"
syn = { version = "2.0", features = ["full", "extra-traits"] }
walkdir = "2.4"
