[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rspyai"
version = "0.0.1"
description = "explore rust functions in a TUI with an AI"
requires-python = ">=3.12"
authors = [{ name = "Nathan Nowack", email = "zzstoatzz@protonmail.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

dependencies = ["pydantic-ai-slim[openai]", "pydantic-settings", "textual"]

[project.scripts]
rspyai = "rspyai.tui:main"

[project.optional-dependencies]
dev = ["pip", "ruff", "pyright", "ipython", "maturin", "pre-commit"]

[project.urls]
Homepage = "https://github.com/zzstoatzz/rspyai"
Source = "https://github.com/zzstoatzz/rspyai"
Documentation = "https://github.com/zzstoatzz/rspyai/blob/main/README.md"

[tool.maturin]
python-source = "python"
module-name = "rspyai"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["python/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I", "D"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true, known-first-party = ["rspyai"] }
mccabe = { max-complexity = 15 }
ignore = [
    # "D100", # ignore missing docstring in module
    # "D102", # ignore missing docstring in public method
    # "D104", # ignore missing docstring in public package
    # "D105", # ignore missing docstring in magic methods
    # "D107", # ignore missing docstring in __init__ methods
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

# [tool.ruff.lint.per-file-ignores]
# "tests/**/*.py" = ["D"]
# "docs/**/*.py" = ["D"]

[tool.pyright]
include = ["python/**/*.py"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = true
